--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -3,7 +3,7 @@ layout: person
 fullname: Andrew Gacek
 position: Senior Industrial Logician
 email: andrew.gacek@rockwellcollins.com
-picture: images/lorem.gif
+picture: /images/lorem.gif
 ---
 
 {{ site.smaccm }}
