Clean up basic design

--- a/publications/index.html
+++ b/publications/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Publications
 ---
 
 {% assign sorted_publications = site.pages | where: 'layout', 'publication' | sort: 'date' | reverse %}
