Abstracted out publication references

--- a/publications/index.html
+++ b/publications/index.html
@@ -9,7 +9,7 @@ title: Publications
   <h1>Publications</h1>
   <ul>
   {% for pub in sorted_publications %}
-    <li><a href="{{ pub.name }}">{{ pub.title }}, {{ pub.authors }}, {{ pub.info }}</a></li>
+    {% include pub-ref.html %}
   {% endfor %}
   </ul>
 </div>
