Cut down on duplication

--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -1,6 +1,7 @@
 ---
 layout: person
 fullname: Andrew Gacek
+sort: Gacek
 position: Senior Industrial Logician
 email: andrew.gacek@rockwellcollins.com
 picture: /images/lorem.gif
