--- a/projects/cvfcs.html
+++ b/projects/cvfcs.html
@@ -1,9 +1,8 @@
 ---
-layout: person
-fullname: Darren Cofer
-sort: Cofer
-position: Fellow
-picture: /images/lorem.gif
+layout: project
+shortname: CVFCS
+longname: Lorem ipsum dolor sit amet
+sort: 2013
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper varius dui vitae dictum. Etiam et diam pretium, sagittis tellus sit amet, dapibus nunc. Ut faucibus quam tincidunt odio mollis, eu laoreet odio vestibulum. Nam efficitur ante eu justo finibus, vel dapibus tellus finibus. Donec feugiat orci et sodales euismod. Ut odio orci, rutrum ac mauris non, tincidunt sollicitudin nulla. Cras eleifend ligula eget justo consequat tempus. Sed tincidunt finibus enim a fermentum. Duis vel velit laoreet, pretium nunc vitae, aliquam velit. Nulla ligula dui, convallis aliquam rutrum non, tincidunt vitae leo. Nullam dictum sollicitudin nulla sit amet ullamcorper.
@@ -15,3 +14,4 @@ Nunc sit amet enim cursus, accumsan massa id, ultrices est. In fermentum ipsum o
 In blandit nec tortor iaculis tempor. Vestibulum sed condimentum quam. Donec ante dolor, aliquet sed aliquet vel, malesuada facilisis sapien. Aliquam malesuada urna ex, vel dapibus leo tempus vel. Phasellus in tempus arcu. Morbi eleifend lacinia turpis quis fermentum. Praesent a lobortis neque. Nam sit amet turpis eget enim eleifend pulvinar. Sed non magna consectetur, vestibulum lacus id, imperdiet mauris. In vestibulum libero velit, at semper orci eleifend eu. Suspendisse potenti.
 
 Etiam interdum aliquet ante sed dapibus. Vestibulum eget odio vitae neque rutrum vulputate id ac elit. Suspendisse a purus sed ligula tincidunt finibus at ac urna. Phasellus auctor purus eu mauris ullamcorper, in molestie felis suscipit. Nam eget neque leo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse a nisi nec tortor accumsan blandit. Donec pretium libero in auctor semper.
+
