--- a/publications/hilt2014.html
+++ b/publications/hilt2014.html
@@ -4,7 +4,7 @@ authors: Andrew Gacek, John Backes, Darren Cofer, Konrad Slind, Mike Whalen
 title: "Resolute: An Assurance Case Language for Architecture Models"
 info: HILT 2014
 link: "http://arxiv.org/abs/1409.4629/"
-date: 2014-10-20
+sort: 20141020
 projects: SMACCM
 ---
 
