--- a/publications/ieee2013.html
+++ b/publications/ieee2013.html
@@ -4,7 +4,7 @@ authors: Michael W. Whalen, Andrew Gacek Darren Cofer, Anitha Murugesan, Mats Pe
 title: "Your \"What\" Is My \"How\": Iteration and Hierarchy in System Design"
 info: IEEE Software 2013
 link: "http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6359702"
-date: 2013
+sort: 20130000
 ---
 
 TODO
