Add author links

--- a/publications/hilt2014.html
+++ b/publications/hilt2014.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: Andrew Gacek, John Backes, Darren Cofer, Konrad Slind, Mike Whalen
+authors: [Andrew Gacek, John Backes, Darren Cofer, Konrad Slind, Mike Whalen]
 title: "Resolute: An Assurance Case Language for Architecture Models"
 info: HILT 2014
 link: "http://arxiv.org/abs/1409.4629/"
