--- a/publications/ppdp2013.html
+++ b/publications/ppdp2013.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: Yuting Wang, Kaustuv Chaudhuri, Andrew Gacek, Gopalan Nadathur
+authors: [Yuting Wang, Kaustuv Chaudhuri, Andrew Gacek, Gopalan Nadathur]
 title: Reasoning about higher-order relational specifications
 info: PPDP 2013
 link: "http://arxiv.org/pdf/1302.2584.pdf"
