Clean up publications

--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -2,6 +2,7 @@
 layout: person
 fullname: Andrew Gacek
 sort: Gacek
+author_key: A. Gacek
 position: Senior Industrial Logician
 email: andrew.gacek@rockwellcollins.com
 picture: /images/lorem.gif
