--- a/people/john-backes.html
+++ b/people/john-backes.html
@@ -2,6 +2,7 @@
 layout: person
 fullname: John Backes
 sort: Backes
+author_key: J. Backes
 position: Senior Research Scientist
 picture: /images/lorem.gif
 ---
