--- a/people/konrad-slind.html
+++ b/people/konrad-slind.html
@@ -2,7 +2,8 @@
 layout: person
 fullname: Konrad Slind
 sort: Slind
-position: Eeyore of Formal Methods
+author_key: K. Slind
+position: Lorem ipsum
 picture: /images/lorem.gif
 ---
 
