--- a/people/darren-cofer.html
+++ b/people/darren-cofer.html
@@ -3,6 +3,7 @@ layout: person
 fullname: Darren Cofer
 sort: Cofer
 author_key: D. Cofer
+email: cofer@ieee.org
 position: Fellow
 picture: /images/lorem.gif
 ---
