--- a/publications/gacek2014hilt.html
+++ b/publications/gacek2014hilt.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [A. Gacek, J. Backes, D. Cofer, K. Slind, M. Whalen]
 title: "Resolute: an assurance case language for architecture models"
-info: Accepted to HILT 2014
+info: HILT 2014
 link: "http://arxiv.org/pdf/1409.4629.pdf"
 date: 2014-10-20 00:00:00
 projects: [SMACCM]
