--- a/publications/whalen2013ieee.html
+++ b/publications/whalen2013ieee.html
@@ -8,4 +8,15 @@ date: 2013-04-01 00:00:00
 projects: [SMACCM]
 ---
 
-Systems are naturally constructed in hierarchies, in which design choices made at higher levels of abstraction levy requirements on system components at the lower levels. Thus, whether an aspect of a system is a design choice or a requirement largely depends on your vantage point within the system components' hierarchy. Systems are also often constructed from the middle-out rather than top-down; compatibility with existing systems and architectures and availability of specific components influence high-level requirements. Requirements and architectural design should be more closely aligned: requirements models must account for hierarchical system construction and architectural design notations must better support requirements specification for system components.
+Systems are naturally constructed in hierarchies, in which design
+choices made at higher levels of abstraction levy requirements on
+system components at the lower levels. Thus, whether an aspect of a
+system is a design choice or a requirement largely depends on your
+vantage point within the system components' hierarchy. Systems are
+also often constructed from the middle-out rather than top-down;
+compatibility with existing systems and architectures and availability
+of specific components influence high-level requirements. Requirements
+and architectural design should be more closely aligned: requirements
+models must account for hierarchical system construction and
+architectural design notations must better support requirements
+specification for system components.
