--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -4,18 +4,60 @@ fullname: Andrew Gacek
 sort: Gacek
 author_key: A. Gacek
 position: Senior Industrial Logician
-email: andrew.gacek@rockwellcollins.com
+email: andrew.gacek@gmail.com
 picture: /images/lorem.gif
 ---
 
 <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper varius dui vitae dictum. Etiam et diam pretium, sagittis tellus sit amet, dapibus nunc. Ut faucibus quam tincidunt odio mollis, eu laoreet odio vestibulum. Nam efficitur ante eu justo finibus, vel dapibus tellus finibus. Donec feugiat orci et sodales euismod. Ut odio orci, rutrum ac mauris non, tincidunt sollicitudin nulla. Cras eleifend ligula eget justo consequat tempus. Sed tincidunt finibus enim a fermentum. Duis vel velit laoreet, pretium nunc vitae, aliquam velit. Nulla ligula dui, convallis aliquam rutrum non, tincidunt vitae leo. Nullam dictum sollicitudin nulla sit amet ullamcorper.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper
+varius dui vitae dictum. Etiam et diam pretium, sagittis tellus sit
+amet, dapibus nunc. Ut faucibus quam tincidunt odio mollis, eu laoreet
+odio vestibulum. Nam efficitur ante eu justo finibus, vel dapibus
+tellus finibus. Donec feugiat orci et sodales euismod. Ut odio orci,
+rutrum ac mauris non, tincidunt sollicitudin nulla. Cras eleifend
+ligula eget justo consequat tempus. Sed tincidunt finibus enim a
+fermentum. Duis vel velit laoreet, pretium nunc vitae, aliquam velit.
+Nulla ligula dui, convallis aliquam rutrum non, tincidunt vitae leo.
+Nullam dictum sollicitudin nulla sit amet ullamcorper.
 </p>
 
-Cras rutrum mauris at lectus placerat, at rutrum odio suscipit. Morbi ac nisi a ante pellentesque sollicitudin. Vivamus lectus ligula, commodo eget felis a, luctus placerat nibh. Duis dignissim eros in felis porttitor, eget sodales dolor consequat. Vestibulum a pellentesque lacus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas euismod mi sed congue porttitor. Donec egestas nisi eu scelerisque porta. Nullam condimentum ligula leo, sed interdum velit luctus id.
+<p>
+Cras rutrum mauris at lectus placerat, at rutrum odio suscipit. Morbi
+ac nisi a ante pellentesque sollicitudin. Vivamus lectus ligula,
+commodo eget felis a, luctus placerat nibh. Duis dignissim eros in
+felis porttitor, eget sodales dolor consequat. Vestibulum a
+pellentesque lacus. Interdum et malesuada fames ac ante ipsum primis
+in faucibus. Maecenas euismod mi sed congue porttitor. Donec egestas
+nisi eu scelerisque porta. Nullam condimentum ligula leo, sed interdum
+velit luctus id.
+</p>
 
-Nunc sit amet enim cursus, accumsan massa id, ultrices est. In fermentum ipsum odio, quis posuere libero pretium vitae. Nunc vitae tempus nisi. Suspendisse potenti. Duis at turpis eu justo scelerisque porttitor. Fusce sed molestie nisl. Vivamus sit amet tincidunt massa. Etiam tristique lectus metus, sodales maximus mi sollicitudin sit amet.
+<p>
+Nunc sit amet enim cursus, accumsan massa id, ultrices est. In
+fermentum ipsum odio, quis posuere libero pretium vitae. Nunc vitae
+tempus nisi. Suspendisse potenti. Duis at turpis eu justo scelerisque
+porttitor. Fusce sed molestie nisl. Vivamus sit amet tincidunt massa.
+Etiam tristique lectus metus, sodales maximus mi sollicitudin sit
+amet.
+</p>
 
-In blandit nec tortor iaculis tempor. Vestibulum sed condimentum quam. Donec ante dolor, aliquet sed aliquet vel, malesuada facilisis sapien. Aliquam malesuada urna ex, vel dapibus leo tempus vel. Phasellus in tempus arcu. Morbi eleifend lacinia turpis quis fermentum. Praesent a lobortis neque. Nam sit amet turpis eget enim eleifend pulvinar. Sed non magna consectetur, vestibulum lacus id, imperdiet mauris. In vestibulum libero velit, at semper orci eleifend eu. Suspendisse potenti.
+<p>
+In blandit nec tortor iaculis tempor. Vestibulum sed condimentum quam.
+Donec ante dolor, aliquet sed aliquet vel, malesuada facilisis sapien.
+Aliquam malesuada urna ex, vel dapibus leo tempus vel. Phasellus in
+tempus arcu. Morbi eleifend lacinia turpis quis fermentum. Praesent a
+lobortis neque. Nam sit amet turpis eget enim eleifend pulvinar. Sed
+non magna consectetur, vestibulum lacus id, imperdiet mauris. In
+vestibulum libero velit, at semper orci eleifend eu. Suspendisse
+potenti.
+</p>
 
-Etiam interdum aliquet ante sed dapibus. Vestibulum eget odio vitae neque rutrum vulputate id ac elit. Suspendisse a purus sed ligula tincidunt finibus at ac urna. Phasellus auctor purus eu mauris ullamcorper, in molestie felis suscipit. Nam eget neque leo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse a nisi nec tortor accumsan blandit. Donec pretium libero in auctor semper.
+<p>
+Etiam interdum aliquet ante sed dapibus. Vestibulum eget odio vitae
+neque rutrum vulputate id ac elit. Suspendisse a purus sed ligula
+tincidunt finibus at ac urna. Phasellus auctor purus eu mauris
+ullamcorper, in molestie felis suscipit. Nam eget neque leo. Interdum
+et malesuada fames ac ante ipsum primis in faucibus. Suspendisse a
+nisi nec tortor accumsan blandit. Donec pretium libero in auctor
+semper.
+</p>
