--- a/people/john-backes.html
+++ b/people/john-backes.html
@@ -5,6 +5,7 @@ sort: Backes
 author_key: J. Backes
 position: Senior Research Scientist
 picture: /images/lorem.gif
+email: john.backes@gmail.com
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper varius dui vitae dictum. Etiam et diam pretium, sagittis tellus sit amet, dapibus nunc. Ut faucibus quam tincidunt odio mollis, eu laoreet odio vestibulum. Nam efficitur ante eu justo finibus, vel dapibus tellus finibus. Donec feugiat orci et sodales euismod. Ut odio orci, rutrum ac mauris non, tincidunt sollicitudin nulla. Cras eleifend ligula eget justo consequat tempus. Sed tincidunt finibus enim a fermentum. Duis vel velit laoreet, pretium nunc vitae, aliquam velit. Nulla ligula dui, convallis aliquam rutrum non, tincidunt vitae leo. Nullam dictum sollicitudin nulla sit amet ullamcorper.
