--- a/people/konrad-slind.html
+++ b/people/konrad-slind.html
@@ -5,6 +5,7 @@ sort: Slind
 author_key: K. Slind
 position: Senior Industrial Logician
 picture: /images/jetpack.png
+email: konrad.slind@gmail.com
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper
