--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -23,4 +23,4 @@ High Assurance Cyber Military Systems project, focusing high-level
 structural and behavioral properties for unmanned air vehicles.
 
 His interests include theorem proving, model checking, language
-translation, and system development.
+translation, and software design.
