--- a/people/konrad-slind.html
+++ b/people/konrad-slind.html
@@ -3,7 +3,7 @@ layout: person
 fullname: Konrad Slind
 sort: Slind
 author_key: K. Slind
-position: Senior Industrial Logician
+position: Industrial Logician
 picture: /images/jetpack.png
 ---
 
