--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -5,7 +5,7 @@ sort: Gacek
 author_key: A. Gacek
 position: Senior Industrial Logician
 email: andrew.gacek@gmail.com
-picture: /images/lorem.gif
+picture: /images/gacek.jpg
 ---
 
 Andrew Gacek is a Senior Industrial Logician at the Rockwell Collins
