--- a/people/konrad-slind.html
+++ b/people/konrad-slind.html
@@ -8,46 +8,35 @@ picture: /images/jetpack.png
 email: konrad.slind@gmail.com
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper
-varius dui vitae dictum. Etiam et diam pretium, sagittis tellus sit
-amet, dapibus nunc. Ut faucibus quam tincidunt odio mollis, eu laoreet
-odio vestibulum. Nam efficitur ante eu justo finibus, vel dapibus
-tellus finibus. Donec feugiat orci et sodales euismod. Ut odio orci,
-rutrum ac mauris non, tincidunt sollicitudin nulla. Cras eleifend
-ligula eget justo consequat tempus. Sed tincidunt finibus enim a
-fermentum. Duis vel velit laoreet, pretium nunc vitae, aliquam
-velit. Nulla ligula dui, convallis aliquam rutrum non, tincidunt vitae
-leo. Nullam dictum sollicitudin nulla sit amet ullamcorper.
+Dr. Konrad Slind has been a member of the Rockwell Collins Advanced
+Technology Center since 2009. He has previously worked at the
+University of Calgary (MSc), Bell Labs Murray Hill (Consultant),
+Technical University of Munich (PhD), Cambridge University Computer
+Lab (Post-Doc), and University of Utah School of Computing
+(faculty). Dr. Slind has led research projects funded by the
+University of Utah, the NSF, and the NSA.
 
-Cras rutrum mauris at lectus placerat, at rutrum odio suscipit. Morbi
-ac nisi a ante pellentesque sollicitudin. Vivamus lectus ligula,
-commodo eget felis a, luctus placerat nibh. Duis dignissim eros in
-felis porttitor, eget sodales dolor consequat. Vestibulum a
-pellentesque lacus. Interdum et malesuada fames ac ante ipsum primis
-in faucibus. Maecenas euismod mi sed congue porttitor. Donec egestas
-nisi eu scelerisque porta. Nullam condimentum ligula leo, sed interdum
-velit luctus id.
+Slind's reseearch has focused on the theory and application of formal
+methods. For his MSc work, Slind implemented the HOL (higher order
+logic) theorem prover in Standard ML. He has developed HOL ever since,
+lately in collaboration with colleagues at NICTA and Cambridge
+University. His PhD work investigated the theory and implementation of
+general recursion and induction, in both HOL-4 and Isabelle/HOL.
 
-Nunc sit amet enim cursus, accumsan massa id, ultrices est. In
-fermentum ipsum odio, quis posuere libero pretium vitae. Nunc vitae
-tempus nisi. Suspendisse potenti. Duis at turpis eu justo scelerisque
-porttitor. Fusce sed molestie nisl. Vivamus sit amet tincidunt
-massa. Etiam tristique lectus metus, sodales maximus mi sollicitudin
-sit amet.
+Slind has published in a variety of areas: hardware verification and
+synthesis, distributed systems, verifying compilation, specification
+of multiprocessor memory models, verification of cryptographic block
+ciphers, and verification of functional programs. He shared a Best
+Paper award at TACAS 2000 for the PROSPER proof and specification
+environment.
 
-In blandit nec tortor iaculis tempor. Vestibulum sed condimentum
-quam. Donec ante dolor, aliquet sed aliquet vel, malesuada facilisis
-sapien. Aliquam malesuada urna ex, vel dapibus leo tempus
-vel. Phasellus in tempus arcu. Morbi eleifend lacinia turpis quis
-fermentum. Praesent a lobortis neque. Nam sit amet turpis eget enim
-eleifend pulvinar. Sed non magna consectetur, vestibulum lacus id,
-imperdiet mauris. In vestibulum libero velit, at semper orci eleifend
-eu. Suspendisse potenti.
-
-Etiam interdum aliquet ante sed dapibus. Vestibulum eget odio vitae
-neque rutrum vulputate id ac elit. Suspendisse a purus sed ligula
-tincidunt finibus at ac urna. Phasellus auctor purus eu mauris
-ullamcorper, in molestie felis suscipit. Nam eget neque leo. Interdum
-et malesuada fames ac ante ipsum primis in faucibus. Suspendisse a
-nisi nec tortor accumsan blandit. Donec pretium libero in auctor
-semper.
+Dr. Slind is currently technical lead on an NSA-sponsored project at
+Rockwell Collins, with the goal to design and implement the Guardol
+programming environment. Guardol is aimed at constructing and
+automatically verifying secure network guards. Guardol programs are
+given a formal semantics in HOL-4, and guard correctness proofs are
+automated by verified transformation of proof obligations into a
+recently invented decision procedure for functional
+programming. Current research is developing verified generation of
+guard hardware from specifications in the language of regular
+expressions.
