--- a/people/konrad-slind.html
+++ b/people/konrad-slind.html
@@ -16,19 +16,23 @@ Lab (Post-Doc), and University of Utah School of Computing
 (faculty). Dr. Slind has led research projects funded by the
 University of Utah, the NSF, and the NSA.
 
-Slind's reseearch has focused on the theory and application of formal
+<p>
+
+Slind's research has focused on the theory and application of formal
 methods. For his MSc work, Slind implemented the HOL (higher order
 logic) theorem prover in Standard ML. He has developed HOL ever since,
 lately in collaboration with colleagues at NICTA and Cambridge
 University. His PhD work investigated the theory and implementation of
 general recursion and induction, in both HOL-4 and Isabelle/HOL.
 
+<p>
+
 Slind has published in a variety of areas: hardware verification and
 synthesis, distributed systems, verifying compilation, specification
 of multiprocessor memory models, verification of cryptographic block
-ciphers, and verification of functional programs. He shared a Best
-Paper award at TACAS 2000 for the PROSPER proof and specification
-environment.
+ciphers, and verification of functional programs. 
+
+<p>
 
 Dr. Slind is currently technical lead on an NSA-sponsored project at
 Rockwell Collins, with the goal to design and implement the Guardol
