--- a/people/konrad-slind.html
+++ b/people/konrad-slind.html
@@ -14,31 +14,22 @@ University of Calgary (MSc), Bell Labs Murray Hill (Consultant),
 Technical University of Munich (PhD), Cambridge University Computer
 Lab (Post-Doc), and University of Utah School of Computing
 (faculty). Dr. Slind has led research projects funded by the
-University of Utah, the NSF, and the NSA.
-
-
-<p>
-
-
-Slind's research has focused on the theory and application of formal
-methods. For his MSc work, Slind implemented the HOL (higher order
-logic) theorem prover in Standard ML. He has developed HOL ever since,
-lately in collaboration with colleagues at NICTA and Cambridge
-University. His PhD work investigated the theory and implementation of
-general recursion and induction, in both HOL-4 and Isabelle/HOL.
-
+University of Utah, the NSF, and the NSA.  Slind's research has
+focused on the theory and application of formal methods. For his MSc
+work, Slind implemented the HOL (higher order logic) theorem prover in
+Standard ML. He has developed HOL ever since, lately in collaboration
+with colleagues at NICTA and Cambridge University. His PhD work
+investigated the theory and implementation of general recursion and
+induction, in both HOL-4 and Isabelle/HOL.
 
 <p>
-
 
 Slind has published in a variety of areas: hardware verification and
 synthesis, distributed systems, verifying compilation, specification
 of multiprocessor memory models, verification of cryptographic block
 ciphers, and verification of functional programs. 
 
-
 <p>
-
 
 Dr. Slind is currently technical lead on an NSA-sponsored project at
 Rockwell Collins, with the goal to design and implement the Guardol
