Removed 'Senior' prefixes

--- a/people/john-backes.html
+++ b/people/john-backes.html
@@ -3,7 +3,7 @@ layout: person
 fullname: John Backes
 sort: Backes
 author_key: J. Backes
-position: Senior Research Scientist
+position: Research Scientist
 picture: /images/lorem.gif
 email: john.backes@gmail.com
 ---
