--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -3,7 +3,7 @@ layout: person
 fullname: Andrew Gacek
 sort: Gacek
 author_key: A. Gacek
-position: Senior Industrial Logician
+position: Industrial Logician
 email: andrew.gacek@gmail.com
 picture: /images/gacek.jpg
 ---
