--- a/publications/whalen2013ieee.html
+++ b/publications/whalen2013ieee.html
@@ -3,7 +3,7 @@ layout: publication
 authors: [M. Whalen, A. Gacek, D. Cofer, A. Murugesan, M. Heimdahl, S. Rayadurgam]
 title: "Your \"what\" is my \"how\": iteration and hierarchy in system design"
 info: "IEEE Software, vol. 30, no. 2, pp. 54-60, March-April 2013, doi:10.1109/MS.2012.173"
-link: "/publications/pdf/whalen2013ieee.html"
+link: "/publications/pdf/whalen2013ieee.pdf"
 date: 2013-04-01 00:00:00
 projects: [SMACCM]
 ---
