--- a/publications/baelde2007cade.html
+++ b/publications/baelde2007cade.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [D. Baelde, A. Gacek, D. Miller, G. Nadathur, A. Tiu]
 title: "The Bedwyr system for model checking over syntactic expressions"
-info: "21th Conference on Automated Deduction (Frank Pfenning, ed.), LNAI, no. 4603, Springer, 2007, pp. 391-397"
+info: "21st Conference on Automated Deduction (Frank Pfenning, ed.), LNAI, no. 4603, Springer, 2007, pp. 391-397"
 link: "http://arxiv.org/pdf/cs/0702116.pdf"
 date: 2007-06-01 00:00:00
 ---
