--- a/publications/backes2008iccad.html
+++ b/publications/backes2008iccad.html
@@ -3,7 +3,7 @@ layout: publication
 authors: [J. Backes]
 title: "The Analysis of Cyclic Circuits with Boolean Satisfiability"
 info: Proceedings of the International Conference on Computer-Aided Design, San Jose, CA. 2008
-link: "backes2008iccad.pdf"
+link: "pdf/backes2008iccad.pdf"
 date: 2008-11-01 00:00:00
 ---
 The accepted wisdom is that combinational circuits must have
