--- a/publications/backes2008iccad.html
+++ b/publications/backes2008iccad.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: [J. Backes]
+authors: [J. Backes, B. Fett, M. Riedel]
 title: "The Analysis of Cyclic Circuits with Boolean Satisfiability"
 info: Proceedings of the International Conference on Computer-Aided Design, San Jose, CA. 2008
 link: "pdf/backes2008iccad.pdf"
