--- a/publications/backes2009iwls.html
+++ b/publications/backes2009iwls.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: [J. Backes]
+authors: [J. Backes, M. Riedel]
 title: "The Synthesis of Cyclic Dependencies with Craig Interpolation"
 info: Proceedings of the International Workshop on Logic Synthesis, Berkeley, CA. 2009
 link: "pdf/backes2009iwls.pdf"
