--- a/publications/backes2010iccad.html
+++ b/publications/backes2010iccad.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: [J. Backes]
+authors: [J. Backes, M. Riedel]
 title: "Reduction of Interpolants for Logic Synthesis"
 info: Proceedings of the International Conference on Computer-Aided Design, San Jose, CA. 2010
 link: "pdf/backes2010iccad.pdf"
