--- a/publications/backes2011iwls.html
+++ b/publications/backes2011iwls.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: [J. Backes]
+authors: [J. Backes, M. Riedel]
 title: "Resolution Proofs as a Data Structure for Logic Synthesis"
 info: Proceedings of the International Workshop on Logic Synthesis, La Jolla, CA. 2011
 link: "pdf/backes2011iwls.pdf"
