adding picture and other publications

--- a/people/john-backes.html
+++ b/people/john-backes.html
@@ -4,7 +4,7 @@ fullname: John Backes
 sort: Backes
 author_key: J. Backes
 position: Research Scientist
-picture: /images/lorem.gif
+picture: /images/backes.jpg
 email: john.backes@gmail.com
 ---
 
