--- a/people/john-backes.html
+++ b/people/john-backes.html
@@ -8,6 +8,6 @@ picture: /images/backes.jpg
 email: john.backes@gmail.com
 ---
 
-John Backes is a Research Scientists at the Rockwell Collins Advanced Technology Center. He earned his PhD from the Department of Electrical and Computer Engineering at the University of Minnesota.  He is the principle developer of AGREE, a compositional verification tool for AADL models.  He is currently working as part of the air vehicle team in DARPA's High Assurance Cyber Millitary Systems program. He is also working on the NASA funded project: Compositional Verification of Flight Critical Systems.  His interests include SMT-Solving, Model Checking, Logic Synthesis.
+John Backes is a Research Scientists at the Rockwell Collins Advanced Technology Center. He earned his PhD from the Department of Electrical and Computer Engineering at the University of Minnesota.  He is the principle developer of AGREE, a compositional verification tool for AADL models.  He is currently working as part of the air vehicle team in DARPA's High Assurance Cyber Millitary Systems program. He is also working on the NASA funded project: Compositional Verification of Flight Critical Systems.  His interests include SMT-Solving, Model Checking, and Logic Synthesis.
 
 
