--- a/people/darren-cofer.html
+++ b/people/darren-cofer.html
@@ -5,7 +5,7 @@ sort: Cofer
 author_key: D. Cofer
 email: cofer@ieee.org
 position: Fellow
-picture: /images/lorem.gif
+picture: /images/cofer.jpg
 ---
 
 Darren Cofer is a Fellow at the Rockwell Collins Advanced Technology Center.  He earned his PhD in Electrical and Computer Engineering from The University of Texas at Austin.  His principal area of expertise is developing and applying advanced analysis methods and tools for verification and certification of high-integrity systems.  He has served as principal investigator on government-sponsored research programs with NASA, NSA, AFRL, and DARPA, developing and using formal methods for verification of safety and security properties. He is currently the principal investigator for the air vehicle team in DARPA's High Assurance Cyber Military Systems project, focusing on formal proof of security properties for unmanned air vehicles.   He recently served on RTCA committee SC-205 developing new certification guidance for airborne software (DO-178C) and was one of the developers of the Formal Methods Supplement (DO-333). 
