--- a/people/konrad-slind.html
+++ b/people/konrad-slind.html
@@ -4,7 +4,7 @@ fullname: Konrad Slind
 sort: Slind
 author_key: K. Slind
 position: Industrial Logician
-picture: /images/jetpack.png
+picture: /images/slind.jpg
 email: konrad.slind@gmail.com
 ---
 
