--- a/publications/gacek2006masters.html
+++ b/publications/gacek2006masters.html
@@ -4,6 +4,7 @@ authors: [A. Gacek]
 title: "The suspension calculus and its relationship to other explicit treatments of substitution in lambda calculi"
 info: Master's thesis, University of Minnesota, December 2006
 link: "http://arxiv.org/pdf/cs/0702027.pdf"
+slides: "/publications/slides/gacek2006masters.pdf"
 date: 2006-12-01 00:00:00
 ---
 
