--- a/publications/gacek2008ijcar.html
+++ b/publications/gacek2008ijcar.html
@@ -4,6 +4,7 @@ authors: [A. Gacek]
 title: "The Abella interactive theorem prover (system description)"
 info: Proceedings of IJCAR 2008 (A. Armando, P. Baumgartner, and G. Dowek, eds.), Lecture Notes in Artificial Intelligence, vol. 5195, Springer, August 2008, pp. 154-161
 link: "http://arxiv.org/pdf/0803.2305.pdf"
+slides: "/publications/slides/gacek2008ijcar.pdf"
 date: 2008-08-01 00:00:00
 ---
 
