--- a/publications/gacek2008lfmtp.html
+++ b/publications/gacek2008lfmtp.html
@@ -4,6 +4,7 @@ authors: [A. Gacek, D. Miller, G. Nadathur]
 title: "Reasoning in Abella about structural operational semantics specifications"
 info: "International Workshop on Logical Frameworks and Meta-Languages: Theory and Practice (LFMTP 2008) (A. Abel and C. Urban, eds.), Electronic Notes in Theoretical Computer Science, no. 228, 2008, pp. 85-100"
 link: "http://arxiv.org/pdf/0804.3914.pdf"
+slides: "/publications/slides/gacek2008lfmtp.pdf"
 date: 2008-06-01 00:00:00
 ---
 
