--- a/publications/gacek2008lics.html
+++ b/publications/gacek2008lics.html
@@ -4,6 +4,7 @@ authors: [A. Gacek, D. Miller, G. Nadathur]
 title: "Combining generic judgments with recursive definitions"
 info: "Proceedings of LICS 2008 (F. Pfenning, ed.), IEEE Computer Society Press, June 2008, pp. 33-44"
 link: "http://arxiv.org/pdf/0802.0865.pdf"
+slides: "/publications/slides/gacek2008lics.pdf"
 date: 2008-06-01 00:00:00
 ---
 
