--- a/publications/gacek2010ppdp.html
+++ b/publications/gacek2010ppdp.html
@@ -4,6 +4,7 @@ authors: [A. Gacek]
 title: "Relating nominal and higher-order abstract syntax specifications"
 info: "Proceedings of the 2010 Symposium on Principles and Practice of Declarative Programming (PPDP), ACM, July 2010, pp. 177-186"
 link: "http://arxiv.org/pdf/1003.5447.pdf"
+slides: "/publications/slides/gacek2010ppdp.pdf"
 date: 2010-07-01 00:00:00
 ---
 
