--- a/publications/backes2008iccad.html
+++ b/publications/backes2008iccad.html
@@ -4,6 +4,7 @@ authors: [J. Backes, B. Fett, M. Riedel]
 title: "The Analysis of Cyclic Circuits with Boolean Satisfiability"
 info: Proceedings of the International Conference on Computer-Aided Design, San Jose, CA. 2008
 link: "pdf/backes2008iccad.pdf"
+slides: "slides/backes2008iccad.ppt"
 date: 2008-11-01 00:00:00
 ---
 The accepted wisdom is that combinational circuits must have
