--- a/publications/backes2010iccad.html
+++ b/publications/backes2010iccad.html
@@ -4,6 +4,7 @@ authors: [J. Backes, M. Riedel]
 title: "Reduction of Interpolants for Logic Synthesis"
 info: Proceedings of the International Conference on Computer-Aided Design, San Jose, CA. 2010
 link: "pdf/backes2010iccad.pdf"
+slides: "slides/backes2010iccad.ppt"
 date: 2010-11-01 00:00:00
 ---
 Craig Interpolation is a state-of-the-art technique
