--- a/publications/backes2011iwls.html
+++ b/publications/backes2011iwls.html
@@ -4,6 +4,7 @@ authors: [J. Backes, M. Riedel]
 title: "Resolution Proofs as a Data Structure for Logic Synthesis"
 info: Proceedings of the International Workshop on Logic Synthesis, La Jolla, CA. 2011
 link: "pdf/backes2011iwls.pdf"
+slides: "slides/backes2011iwls.ppt"
 date: 2011-11-01 00:00:00
 ---
 the results of modern synthesis tools are heavily
