--- a/publications/backes2013date.html
+++ b/publications/backes2013date.html
@@ -4,6 +4,7 @@ authors: [J. Backes, M. Riedel]
 title: "Using Cubes of Non-state Variables With Property Directed Reachability"
 info: Proceedings of Design Automation and Test in Europe, Grenoble, France. 2013
 link: "pdf/backes2013date.pdf"
+slides: "slides/backes2013date.pptx"
 date: 2013-03-01 00:00:00
 ---
 A new SAT-Based algorithm for symbolic model
