--- a/publications/backes2009iwls.html
+++ b/publications/backes2009iwls.html
@@ -4,6 +4,7 @@ authors: [J. Backes, M. Riedel]
 title: "The Synthesis of Cyclic Dependencies with Craig Interpolation"
 info: Proceedings of the International Workshop on Logic Synthesis, Berkeley, CA. 2009
 link: "pdf/backes2009iwls.pdf"
+slides: "slides/backes2009iwls.ppt"
 date: 2009-11-01 00:00:00
 ---
 The accepted wisdom is that combinational circuits
