--- a/publications/backes2013phd.html
+++ b/publications/backes2013phd.html
@@ -4,6 +4,7 @@ authors: [J. Backes]
 title: "Algorithms and Data Structures for Logic Synthesis and Verfication Using Boolean Satisfiability"
 info: Ph.D. Thesis, University of Minnesota, March 2013.
 link: "pdf/backes2013phd.pdf"
+slides: "slides/backes2013phd.pptx"
 date: 2013-03-01 00:00:00
 ---
 Boolean satisability (SAT) was the rst problem to be proven to be NP-Complete.
