--- a/publications/gacek2014hilt.html
+++ b/publications/gacek2014hilt.html
@@ -4,6 +4,7 @@ authors: [A. Gacek, J. Backes, D. Cofer, K. Slind, M. Whalen]
 title: "Resolute: an assurance case language for architecture models"
 info: HILT 2014
 link: "http://arxiv.org/pdf/1409.4629.pdf"
+slides: "slides/gacek2014hilt.pptx"
 date: 2014-10-20 00:00:00
 projects: [SMACCM]
 ---
