--- a/people/index.html
+++ b/people/index.html
@@ -17,6 +17,7 @@ title: "Loonwerks: People"
       <div class="email"><a href="mailto:{{ person.email }}">{{ person.email }}</a></div>
     </div>
   </div>
+  <div class="separator"></div>
   {% endfor %}
 </div>
 
