Fix some extra periods

--- a/publications/backes2010jnmc.html
+++ b/publications/backes2010jnmc.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [W. Qian, J. Backes, M. Riedel]
 title: "The Synthesis of Stochastic Circuits for Nanoscale Computation"
-info: International Journal of Nanotechnology and Molecular Computation, pp. 39-57, 2010.
+info: International Journal of Nanotechnology and Molecular Computation, pp. 39-57, 2010
 link: "pdf/qian2010jnmc.pdf"
 date: 2010-11-01 00:00:00
 ---
