--- a/publications/backes2012todaes.html
+++ b/publications/backes2012todaes.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [J. Backes, M. Riedel]
 title: "The Synthesis of Cyclic Dependencies with Boolean Satisfiability"
-info: Transactions on Design Automation of Electronic Systems, 2012.
+info: Transactions on Design Automation of Electronic Systems, 2012
 link: "pdf/backes2012todaes.pdf"
 date: 2012-03-01 00:00:00
 ---
