--- a/publications/gacek2009phd.html
+++ b/publications/gacek2009phd.html
@@ -4,6 +4,7 @@ authors: [A. Gacek]
 title: "A framework for specifying, prototyping, and reasoning about computational systems"
 info: Ph.D. thesis, University of Minnesota, September 2009
 link: "http://arxiv.org/pdf/0910.0747.pdf"
+slides: "/publications/slides/gacek2009phd.pdf"
 date: 2009-09-01 00:00:00
 ---
 
