--- a/projects/smaccm.html
+++ b/projects/smaccm.html
@@ -5,25 +5,25 @@ longname: Secure Mathematically-Assured Composition of Control Models
 sort: 2014
 ---
 
-CYBER THREAT TO UAVS
+<p>CYBER THREAT TO UAVS</p>
 
-UAVs and other military aircraft have off-vehicle network connections for command and control, sharing sensor data, and coordination with other forces.  This connectivity provides tremendous new functionality, but also exposes these military assets to the same security risks that plague our PCs and web servers.  
+<p>UAVs and other military aircraft have off-vehicle network connections for command and control, sharing sensor data, and coordination with other forces.  This connectivity provides tremendous new functionality, but also exposes these military assets to the same security risks that plague our PCs and web servers.  </p>
 
-Security is an emergent property of a system.  This means there is not a special box in the system that provides security.  We have to look at the whole system and how its components interact with each other and the outside world.  Vulnerabilities can arise from the "front door" (network protocols), component errors (software bugs), or unintended interactions between otherwise correct components.
+<p>Security is an emergent property of a system.  This means there is not a special box in the system that provides security.  We have to look at the whole system and how its components interact with each other and the outside world.  Vulnerabilities can arise from the "front door" (network protocols), component errors (software bugs), or unintended interactions between otherwise correct components.</p>
 
-Current approaches to cyber security rely on patching systems after a vulnerability is discovered.  What is needed is a clean-slate, mathematically-based approach for building secure software.  DARPA initiated the HACMS program (High Assurance Cyber Military Systems) to develop the technologies needed to counter cyber threats to network-enabled embedded systems.  
+<p>Current approaches to cyber security rely on patching systems after a vulnerability is discovered.  What is needed is a clean-slate, mathematically-based approach for building secure software.  DARPA initiated the HACMS program (High Assurance Cyber Military Systems) to develop the technologies needed to counter cyber threats to network-enabled embedded systems.  </p>
 
-TECHNOLOGIES FOR CYBER HARD UAVS
+<p>TECHNOLOGIES FOR CYBER HARD UAVS</p>
 
-The SMACCM project is developing new tools for building UAV software that is provably secure against many classes of cyber attack.  Our goal is to provide not just security, but verifiable security; that is, system designs for which we can have confidence in and evidence of security.  We are developing system architecture models, software components for mission and control functions, and operating system software, all of which are mathematically analyzed to ensure key security properties.
+<p>The SMACCM project is developing new tools for building UAV software that is provably secure against many classes of cyber attack.  Our goal is to provide not just security, but verifiable security; that is, system designs for which we can have confidence in and evidence of security.  We are developing system architecture models, software components for mission and control functions, and operating system software, all of which are mathematically analyzed to ensure key security properties.</p>
 
-Unique aspects our approach include: 
+<p>Unique aspects our approach include: </p>
 <ul>
 <li>Integration of proof and software engineering</li>
 <li>Formally verified operating system software</li>
 <li>High-assurance control components based on formal design languages and synthesis</li>
 </ul>
-We are prototyping these new technologies on a research quadcopter, and then transitioning them to Boeing's Unmanned Little Bird helicopter to demonstrate their practicality and effectiveness.  At the end of our first phase, the HACMS Red Team was given six weeks and full access to the research vehicle source code and was unable to remotely hack the vehicle.  
-Our tools for secure software development and analysis are available for transition to other vehicle programs.  
+<p>We are prototyping these new technologies on a research quadcopter, and then transitioning them to Boeing's Unmanned Little Bird helicopter to demonstrate their practicality and effectiveness.  At the end of our first phase, the HACMS Red Team was given six weeks and full access to the research vehicle source code and was unable to remotely hack the vehicle.  
+Our tools for secure software development and analysis are available for transition to other vehicle programs.  </p>
 
 
