--- a/projects/cvfcs.html
+++ b/projects/cvfcs.html
@@ -1,7 +1,7 @@
 ---
 layout: project
 shortname: CVFCS
-longname: Lorem ipsum dolor sit amet
+longname: Compositional Verification of Flight Critical Systems
 sort: 2013
 ---
 
