--- a/projects/cvfcs.html
+++ b/projects/cvfcs.html
@@ -5,13 +5,43 @@ longname: Compositional Verification of Flight Critical Systems
 sort: 2013
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper varius dui vitae dictum. Etiam et diam pretium, sagittis tellus sit amet, dapibus nunc. Ut faucibus quam tincidunt odio mollis, eu laoreet odio vestibulum. Nam efficitur ante eu justo finibus, vel dapibus tellus finibus. Donec feugiat orci et sodales euismod. Ut odio orci, rutrum ac mauris non, tincidunt sollicitudin nulla. Cras eleifend ligula eget justo consequat tempus. Sed tincidunt finibus enim a fermentum. Duis vel velit laoreet, pretium nunc vitae, aliquam velit. Nulla ligula dui, convallis aliquam rutrum non, tincidunt vitae leo. Nullam dictum sollicitudin nulla sit amet ullamcorper.
+<p>Advanced capabilities planned for the next generation of aircraft and the Next Generation
+Air Transportation System (NextGen) will be based on complex new software. Integrated
+Modular Avionics (IMA) will enable the implementation of more functionality in software and
+tighter integration of these functions to improve aircraft efficiency. Aircraft will incorporate
+adaptive control algorithms that will provide enhanced safety and robustness in the
+presence of failures and adverse flight conditions. NextGen will encompass airborne and
+ground-based nodes with significant computational elements acting in coordination to
+maintain a safe and efficient airspace.</p>
 
-Cras rutrum mauris at lectus placerat, at rutrum odio suscipit. Morbi ac nisi a ante pellentesque sollicitudin. Vivamus lectus ligula, commodo eget felis a, luctus placerat nibh. Duis dignissim eros in felis porttitor, eget sodales dolor consequat. Vestibulum a pellentesque lacus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas euismod mi sed congue porttitor. Donec egestas nisi eu scelerisque porta. Nullam condimentum ligula leo, sed interdum velit luctus id.
+<p>However, there are serious barriers to the deployment of these new capabilities. As these
+systems have grown in complexity, their verification has become the single most costly
+development activity. The verification costs of even more complex NextGen systems in the
+future will impact safety not just through an increasing incidence of errors and unforeseen
+interactions, but by delaying and preventing the deployment of crucial safety functions.</p>
 
-Nunc sit amet enim cursus, accumsan massa id, ultrices est. In fermentum ipsum odio, quis posuere libero pretium vitae. Nunc vitae tempus nisi. Suspendisse potenti. Duis at turpis eu justo scelerisque porttitor. Fusce sed molestie nisl. Vivamus sit amet tincidunt massa. Etiam tristique lectus metus, sodales maximus mi sollicitudin sit amet.
+<p>In this NASA-funded project we are addressing these challenges by developing a framework for compositional
+verification that will permit the verification of systems exceeding the complexity limits of
+current approaches. Our approach is based on:
+<ul>
+<li>Modeling the system architecture using the industry standard notations that engineers will be using</li>
+<li>Developing a sophisticated translation framework that automates the translation of these models for analysis by
+powerful general purpose verification engines such as model checkers and theorem provers</li>
+<li>Developing techniques for compositional verification based on the system
+architecture to divide the verification task into manageable, reusable pieces </li>
+</ul>
+This will significantly reduce verification costs by identifying and correcting system design errors
+early in the life cycle rather than waiting until system integration. We propose to validate
+this approach and the tools we develop on a realistic aircraft flight guidance system model
+that we will make publicly available.</p>
 
-In blandit nec tortor iaculis tempor. Vestibulum sed condimentum quam. Donec ante dolor, aliquet sed aliquet vel, malesuada facilisis sapien. Aliquam malesuada urna ex, vel dapibus leo tempus vel. Phasellus in tempus arcu. Morbi eleifend lacinia turpis quis fermentum. Praesent a lobortis neque. Nam sit amet turpis eget enim eleifend pulvinar. Sed non magna consectetur, vestibulum lacus id, imperdiet mauris. In vestibulum libero velit, at semper orci eleifend eu. Suspendisse potenti.
-
-Etiam interdum aliquet ante sed dapibus. Vestibulum eget odio vitae neque rutrum vulputate id ac elit. Suspendisse a purus sed ligula tincidunt finibus at ac urna. Phasellus auctor purus eu mauris ullamcorper, in molestie felis suscipit. Nam eget neque leo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse a nisi nec tortor accumsan blandit. Donec pretium libero in auctor semper.
+<p>Our compositional approach exploits the verification effort and artifacts that are
+already part of typical software component verification work. We use
+formal assume-guarantee contracts that correspond to the requirements for each
+component. Each component in the system model is annotated with a contract that
+includes the requirements and constraints that were specified and verified as part of its
+development process. We then reason about the system-level behavior based on the
+interaction of the component contracts. This approach allows us to leverage  existing
+development processes for software components and provides a scalable way to reason about
+the system as a whole.</p>
 
